# duckdb_fastapi

./: LICENSE  PARQUET_FOLDERS.md  README.md  examples.py  pyproject.toml  setup.cfg
.github/workflows/: ci-cd.yml  publish.yml
datasample/: RNA_long_non-coding_alt_loci.txt  croissant.json  gene_with_protein_product_alt_loci.txt  human_disease_knowledge_filtered.tsv
datasample/evidence_impc/: part-00020-7e97e606-dca3-4f94-bf52-ef4bf91ce67b-c000.snappy.parquet
datasample/evidence_intogen/: part-00000-441dffd9-baad-485b-9ecf-38a89662352f-c000.snappy.parquet
datasample/evidence_orphanet/: part-00000-5dca8741-f9e3-4d39-a5c2-0efd779593ea-c000.snappy.parquet
duckdb_fastapi/: __init__.py  main.py
duckdbfastapi/: __init__.py  main.py
tests/: conftest.py  test_additional_coverage.py  test_coverage.py  test_endpoints.py  test_handler_execution.py  test_handlers.py  test_integration.py  test_main.py  test_parquet_folders.py  test_schema_endpoints.py
