[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "duckdbfastapi"
version = "0.1.2"
description = "A FastAPI application for serving DuckDB data endpoints"
readme = "README.md"
requires-python = ">=3.9"
license = {text = "MIT"}
authors = [
    {name = "Corina Duenas", email = "corina.bioinformatic@gmail.com"},
]
keywords = ["fastapi", "duckdb", "api", "data"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
]

dependencies = [
    "fastapi>=0.100.0",
    "uvicorn[standard]>=0.23.0",
    "duckdb>=0.8.0",
    "pydantic>=2.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
    "pytest-asyncio>=0.21.0",
    "httpx>=0.24.0",
    "ruff>=0.1.0",
    "mypy>=1.4.0",
]

[project.urls]
Homepage = "https://github.com/example/duckdbfastapi"
Repository = "https://github.com/example/duckdbfastapi.git"
Issues = "https://github.com/example/duckdbfastapi/issues"

[tool.setuptools]
packages = ["duckdbfastapi"]

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false

[tool.pytest.ini_options]
minversion = "7.0"
addopts = "-v --cov=duckdbfastapi --cov-report=html --cov-report=term-missing"
testpaths = ["tests"]
asyncio_mode = "auto"
